# libhijack

./: .gitignore  AUTHORS  LICENSE  Makefile  Makefile.in  Makefile.inc  README  README.md  build.sh  configure  configure.ac  doxygen.conf  gpg.pub
dummyso/: Makefile  dummyso.c
freebsd_tests64/: FindFunc.c  FindSyscall.c  InjectSharedObject.c  Makefile  MapMemory.c  NewInject.c  PrintFuncs.c  Resolv.c  pid.c  readso.c  recvso.c  test.asm  testso.c
hijack/: Makefile  hijack.c  hijack_prog.h  soe.c
include/: Makefile  config.h.in  error.h  hijack.h  hijack_elf.h  hijack_func.h  hijack_ptrace.h  map.h  misc.h  os_resolv.h  so.h
injectable/: Makefile  injectable.c
libhijack/: Makefile  elf.c  error.c  func.c  libhijack.c  map.c  misc.c  os_resolv.c  ptrace.c  rtld.c
libhijack/arch/aarch64/: hijack_machdep.h  inst.c  md_map.c  regs.c
libhijack/arch/amd64/: hijack_machdep.h  inst.c  md_map.c  regs.c
linux_tests32/: InjectSharedObject.c  PrintFuncs.c  PrintPLTs.c  fopenso.c  memsetso.c  pid.c  recvso.c  socketso.c  strlenso.c  test.asm  testso.c
linux_tests64/: PrintFuncs.c  pid.c
scripts/: unhardenedbsd.sh
shellcode/: dlopen_base_hijack.asm
shellcode/aarch64/: exit.asm
shellcode/amd64/: .gitignore  exit.asm  fdlopen.asm
src/: Makefile  Makefile.am  Makefile.in  doxygen.readme  elf.c  error.c  func.c  libhijack.c  map.c  misc.c  os_resolv.c  ptrace.c  rtld.c  so.c
tests/: FindFunc.c  InjectSharedObject.c  PrintFuncs.c  socketso.c  strlenso.c  test.asm  testso.c
tests32/: memsetso.c  pid.c  test.asm
